--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
     "builds": [{
-        "src": "djangoprojectname/wsgi.py",
+        "src": "agenda_avalia/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "djangoprojectname/wsgi.py"
+            "dest": "agenda_avalia/wsgi.py"
         }
     ]
 }
